<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:orientation="vertical" app:background="0x106000b" app:padding="@dimen/spacing_large" app:layout_width="match_parent" app:layout_height="wrap_content"
    <LinearLayout app:theme="@style/ThemeOverlay.AppCompat.Dark" app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:orientation="vertical" app:focusableInTouchMode="true" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="@dimen/spacing_mlarge">
        <ImageView app:id="@id/imageView" app:layout_width="UNKNOWN_DATA_0x5001" app:layout_height="UNKNOWN_DATA_0x5001" app:tint="@color/colorPrimary" app:srcCompat="@drawable/logo" />
        <TextView app:textAppearance="@style/TextAppearance.AppCompat.Large" app:textStyle="bold" app:textColor="@color/grey_90" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="@dimen/spacing_middle" app:text="@string/app_name" />
    </LinearLayout>
    <TextView app:textAppearance="@style/TextAppearance.AppCompat.Medium" app:textColor="@color/grey_80" app:autoLink="web|all" app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="@dimen/spacing_xlarge" app:layout_marginBottom="@dimen/spacing_xlarge" app:text="@string/about_text" />
    <android.support.v7.widget.AppCompatButton app:textColor="0x106000b" app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@id/bt_getcode" app:background="@drawable/btn_rounded_accent" app:paddingLeft="@dimen/spacing_xlarge" app:paddingRight="@dimen/spacing_xlarge" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_margin="@dimen/spacing_medium" app:text="GET SOURCE CODE" />
    <android.support.v7.widget.AppCompatButton app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@id/bt_close" app:layout_width="match_parent" app:layout_height="wrap_content" app:text="@string/CLOSE" style="@style/Widget.AppCompat.Button.Borderless" />
</LinearLayout>
