<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:layout_width="match_parent" app:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" app:id="@id/app_bar_layout" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0xfa01">
        <android.support.design.widget.CollapsingToolbarLayout app:id="@id/collapsing_toolbar" app:layout_width="match_parent" app:layout_height="match_parent" app:layout_scrollFlags="3" app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Headline" app:contentScrim="?attr/colorPrimary">
            <ImageView app:id="@id/image" app:layout_width="match_parent" app:layout_height="match_parent" app:src="@drawable/image_9" app:scaleType="centerCrop" app:layout_collapseMode="2" />
            <View app:background="@color/overlay_dark_30" app:layout_width="match_parent" app:layout_height="match_parent" />
            <android.support.v7.widget.Toolbar app:id="@id/toolbar" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x7f010046" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" app:layout_collapseMode="1" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView app:background="0x106000b" app:padding="@dimen/spacing_mlarge" app:scrollbars="UNKNOWN_DATA_0x0" app:clipToPadding="false" app:layout_width="match_parent" app:layout_height="match_parent" app:scrollingCache="true" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout app:orientation="vertical" app:layout_width="match_parent" app:layout_height="wrap_content">
            <TextView app:textAppearance="@style/TextAppearance.AppCompat.Body2" app:textColor="0x106000b" app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@id/channel" app:background="@color/colorPrimary" app:paddingLeft="@dimen/spacing_medium" app:paddingTop="@dimen/spacing_xsmall" app:paddingRight="@dimen/spacing_medium" app:paddingBottom="@dimen/spacing_small" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginBottom="@dimen/spacing_middle" app:minWidth="60dp" app:text="Sport" />
            <TextView app:textAppearance="@style/TextAppearance.AppCompat.Headline" app:textStyle="bold" app:textColor="0x106000c" app:id="@id/title" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginBottom="@dimen/spacing_medium" app:text="@string/short_lorem_ipsum" />
            <LinearLayout app:gravity="top|bottom|center_vertical|fill_vertical|center|fill" app:orientation="horizontal" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginBottom="@dimen/spacing_mlarge">
                <ImageView app:layout_width="UNKNOWN_DATA_0xf01" app:layout_height="UNKNOWN_DATA_0xf01" app:tint="@color/grey_60" app:srcCompat="@drawable/ic_event" />
                <TextView app:textAppearance="@style/TextAppearance.AppCompat.Caption" app:textColor="@color/grey_60" app:id="@id/date" app:layout_width="match_parent" app:layout_height="wrap_content" app:text="16 Mar 2016" />
            </LinearLayout>
            <TextView app:textAppearance="@style/TextAppearance.AppCompat.Subhead" app:textColor="@color/grey_80" app:id="@c2766e/content" app:layout_width="match_parent" app:layout_height="wrap_content" app:text="@string/very_long_lorem_ipsum" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.FloatingActionButton app:id="@id/fab" app:clickable="true" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_margin="@dimen/spacing_mlarge" app:tint="0x106000b" app:srcCompat="@drawable/ic_bookmark" app:layout_anchor="@id/app_bar_layout" app:layout_anchorGravity="800055" app:fabSize="0" />
</android.support.design.widget.CoordinatorLayout>
